implemented corresponding methods in repository and service classes, added testing, added .run.xml for TestService.java (won't run without specified vm options) #4